force-app/main/default/objects/HRAdmin_Payment_Request_line__c/HRAdmin_Payment_Request_line__c.object-meta.xml
<CustomObject>
    <label>HRAdmin Payment Request line</label>
    <nameField>
        <displayFormat>HL-{00000000}</displayFormat>
        <label>HRAdmin Payment Request line ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>HRAdmin Payment Request lines</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>