force-app/main/default/objects/HRAdmin_Payment_Request_line__c/fields/Activities__c.field-meta.xml
<CustomField>
    <fullName>Activities__c</fullName>
    <formula>General_Cost__r.Activity__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Activities</label>
    <type>Text</type>
</CustomField>