force-app/main/default/objects/HRAdmin_Payment_Request_line__c/fields/Activity__c.field-meta.xml
<CustomField>
    <fullName>Activity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Activity</label>
    <referenceTo>Common_fee__c</referenceTo>
    <relationshipLabel>HRAdmin Payment Request lines</relationshipLabel>
    <relationshipName>HRAdmin_Payment_Request_lines</relationshipName>
    <type>Lookup</type>
</CustomField>