force-app/main/default/objects/HRAdmin_Payment_Request_line__c/fields/General_Cost__c.field-meta.xml
<CustomField>
    <fullName>General_Cost__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>General Cost</label>
    <referenceTo>GeneralCost__c</referenceTo>
    <relationshipLabel>HRAdmin Payment Request lines</relationshipLabel>
    <relationshipName>HRAdmin_Payment_Request_lines</relationshipName>
    <type>Lookup</type>
</CustomField>