force-app/main/default/objects/HRAdmin_Payment_Request_line__c/fields/HRAdmin_Payment_Request__c.field-meta.xml
<CustomField>
    <fullName>HRAdmin_Payment_Request__c</fullName>
    <label>HRAdmin Payment Request</label>
    <referenceTo>HRAdmin_PaymentRequest__c</referenceTo>
    <relationshipLabel>HRAdmin Payment Request lines</relationshipLabel>
    <relationshipName>HRAdmin_Payment_Request_lines</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>