force-app/main/default/objects/HRAdmin_Payment_Request_line__c/fields/PIC__c.field-meta.xml
<CustomField>
    <fullName>PIC__c</fullName>
    <formula>General_Cost__r.PIC__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PIC</label>
    <type>Text</type>
</CustomField>