force-app/main/default/objects/HRAdmin_Payment_Request_line__c/fields/Vendor__c.field-meta.xml
<CustomField>
    <fullName>Vendor__c</fullName>
    <formula>General_Cost__r.Vendor__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Vendor</label>
    <type>Text</type>
</CustomField>